--- a/app/composer.json
+++ b/app/composer.json
@@ -5,13 +5,12 @@
         "php": ">=7.0.8",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "guzzlehttp/guzzle": "^7.0",
         "symfony/console": "3.4.*",
         "symfony/dotenv": "3.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "3.4.*",
         "symfony/yaml": "3.4.*"
-    },
-    "require-dev": {
     },
     "config": {
         "preferred-install": {
