--- a/app/composer.json
+++ b/app/composer.json
@@ -5,6 +5,9 @@
         "php": ">=7.0.8",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/doctrine-bundle": "^1.6",
+        "doctrine/doctrine-migrations-bundle": "^1.3",
+        "doctrine/orm": "^2.5",
         "guzzlehttp/guzzle": "^7.0",
         "symfony/console": "3.4.*",
         "symfony/dotenv": "3.4.*",
