--- a/app/composer.json
+++ b/app/composer.json
@@ -9,6 +9,7 @@
         "doctrine/doctrine-migrations-bundle": "^1.3",
         "doctrine/orm": "^2.5",
         "guzzlehttp/guzzle": "^7.0",
+        "league/commonmark": "^2.4",
         "symfony/console": "3.4.*",
         "symfony/dotenv": "3.4.*",
         "symfony/flex": "^1.3.1",
@@ -61,5 +62,8 @@
             "allow-contrib": false,
             "require": "3.4.*"
         }
+    },
+    "require-dev": {
+        "symfony/maker-bundle": "^1.23"
     }
 }
