--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,14 @@ services:
     build: docker/php-fpm
     volumes:
       - ./app:/var/www/html
+  postgres:
+    image: postgres:latest
+    container_name: webModuleDB
+    ports:
+      - '6500:5432'
+    volumes:
+      - postgresDB:/data/postgres
+    env_file:
+      - ./app/.env
+volumes:
+  postgresDB:
