--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,14 +15,14 @@ services:
     build: docker/php-fpm
     volumes:
       - ./app:/var/www/html
-  postgres:
+  db:
     container_name: db
     image: postgres:latest
     ports:
       - '6500:5432'
     volumes:
-      - DB:/data/postgres
+      - db:/data/postgres
     env_file:
       - ./app/.env
 volumes:
-  DB:
+  db:
