--- a/app/composer.json
+++ b/app/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "guzzlehttp/guzzle": "^7.0",
         "league/commonmark": "^2.4",
+        "mongodb/mongodb": "^1.16",
         "symfony/console": "3.4.*",
         "symfony/dotenv": "3.4.*",
         "symfony/flex": "^1.3.1",
