--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,8 @@ services:
     ports:
       - '6500:5432'
     volumes:
-      - db:/data/postgres
+      - postgresDB:/data/postgres
     env_file:
       - ./app/.env
 volumes:
-  db:
+  postgresDB:
