--- a/app/composer.json
+++ b/app/composer.json
@@ -15,6 +15,7 @@
         "symfony/dotenv": "3.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "3.4.*",
+        "symfony/http-foundation": "3.4.*",
         "symfony/yaml": "3.4.*"
     },
     "config": {
