--- a/app/config/routes.yaml
+++ b/app/config/routes.yaml
@@ -14,6 +14,9 @@ home:
 contact:
   path: /contact
   defaults: {_controller: 'App\Controller\General::contact'}
+question:
+  path: /question
+  defaults: {_controller: 'App\Controller\General::question'}
 logout:
   path: /logout
   defaults: {_controller: 'App\Controller\Auth::logout'}
