--- a/app/config/routes.yaml
+++ b/app/config/routes.yaml
@@ -37,9 +37,14 @@ github_callback:
 # API routes
 #
 # Auth (API routes releated to authentication)
-me-api:
+me-auth:
   path: /api/auth/me
   defaults: {_controller: 'App\Controller\Auth::me'}
-logout-api:
+logout-auth:
   path: /api/auth/logout
   defaults: {_controller: 'App\Controller\Auth::logout'}
+#
+# Question (API routes related to questions)
+create-question:
+  path: /api/question/create
+  defaults: {_controller: 'App\Controller\Question::create'}
