Added a background route to fetch the new question
This route will be called from a cron service at the time when the question time period ends and will  show the new question

--- a/app/config/routes.yaml
+++ b/app/config/routes.yaml
@@ -48,3 +48,8 @@ logout-auth:
 create-question:
   path: /api/question/create
   defaults: {_controller: 'App\Controller\Question::create'}
+#
+# Background services
+get-new-question:
+  path: /api/background/question
+  defaults: {_controller: 'App\Controller\Background\Question::getNewQuestion'}
