--- a/app/composer.json
+++ b/app/composer.json
@@ -11,6 +11,7 @@
         "league/commonmark": "^2.4",
         "mongodb/mongodb": "^1.16",
         "ramsey/uuid": "^4.7",
+        "resend/resend-php": "^0.7.1",
         "symfony/console": "3.4.*",
         "symfony/dotenv": "3.4.*",
         "symfony/flex": "^1.3.1",
