Added the admin route to upload new questions

--- a/app/config/routes.yaml
+++ b/app/config/routes.yaml
@@ -26,6 +26,9 @@ logout:
 login:
   path: /login
   defaults: {_controller: 'App\Controller\OAuth\Github::github'}
+admin:
+  path: /admin
+  defaults: {_controller: 'App\Controller\Admin::admin'}
 #
 # OAuth paths
 #
